-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.0-beta2
-
None
-
4e7adc246 (master)
there's a small bug in the argument type creation of "create missing member functions". i'm having the following definition to select span from boost or stl:
namespace ni { #if __cpp_lib_span >= 202002L using std::span; #else using boost::span; #endif }
and implementing a class like:
namespace ni { class foo { void bar(ni::span<int>); }; }
if i use "create missing member functions", the generated code has the wrong signature for `ni::span` (my cmake configuration is c++20, so `__cpp_lib_span == true`):
namespace ni {
foo::bar(ni::boost::span<int>);
}
For Gerrit Dashboard: QTCREATORBUG-28386 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
446231,3 | CppEditor: Another name minimalization fix | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |