CppEditor: Another name minimalization fix

... involving using declarations.
See also aae3ce15aa72631e290b4eb6d0e163706b10390b.

Fixes: QTCREATORBUG-28386
Change-Id: I4171dce7b4e34b41c4a894e3bb34b3f62f82ac0f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>